--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,3 +1,36 @@
 <view>
+  <!-- 头部标题 -->
   <bili-title></bili-title>
+  <!-- 首页导航栏 -->
+  <view class="nav_wrap">
+    <!-- 可滚动组件 -->
+    <scroll-view class="nav" scroll-x="true">
+      <view class="nav_item {{index === currentIndexNav ? 'active' : ''}}" 
+      wx:for="{{navList}}" wx:key="id"
+      bindtap="activeNav" data-index="{{index}}"
+      >
+      {{item.text}}</view>
+    </scroll-view>
+  </view>
+  <!-- 轮播图 -->
+  <view class="slides">
+    <swiper autoplay indicator-dots circular>
+      <swiper-item wx:for="{{swiperList}}" wx:key="imgSrc">
+        <navigator>
+          <image mode="widthFix" src="{{item.imgSrc}}"></image>
+        </navigator>
+      </swiper-item>
+    </swiper>
+  </view>
+  <!-- 视频 -->
+  <view class="video_wrap">
+    <navigator class="video_item" url="../details/details?id={{item.id}}" wx:for="{{videoList}}" wx:key="imgSrc">
+      <!-- 图片 -->
+      <view class="video_image">
+        <image mode="widthFix" src="{{item.imgSrc}}"></image>
+      </view>
+      <!-- 评论 -->
+      <view class="video_comment">{{item.desc}}</view>
+    </navigator>
+  </view>
 </view>
